name:                 fastcut
version:              0.1.0
synopsis:             High-productivity video and audio editing
-- description:
license:              MPL-2.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@gmail.com
copyright:            Oskar Wickström
category:             Multimedia
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:   CHANGELOG.md
data-dir:             src/data
data-files:           gui.glade
                    , style.css
                    , stripes.png

library
  main-is:              Main.hs
  exposed-modules:      FastCut.Focus
                      , FastCut.Scene
                      , FastCut.Scene.View
                      , FastCut.Sequence
                      , GI.Gtk.Declarative
                      , GI.Gtk.Declarative.Container
                      , GI.Gtk.Declarative.CSS
                      , GI.Gtk.Declarative.Node
                      , GI.Gtk.Declarative.Object
                      , GI.Gtk.Declarative.Patch
                      , GI.Gtk.Declarative.Props
  build-depends:        base >=4.10 && <4.12
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gdk
                      , gi-pango
                      , haskell-gi
                      , haskell-gi-base
                      , mtl
                      , text
                      , time
                      , unordered-containers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:        -Wall

executable fastcut
  main-is:              Main.hs
  other-modules:        Paths_fastcut
  -- other-extensions:
  build-depends:        base >=4.10 && <4.12
                      , fastcut
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gdk
                      , gi-pango
                      , haskell-gi
                      , haskell-gi-base
                      --, haskell-gi-overloading == 0.0.*
                      , text
                      , time
  hs-source-dirs:       exe
  default-language:     Haskell2010
  ghc-options:        -Wall -threaded


test-suite fastcut-tests
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Main.hs
    other-modules:   FastCut.FocusTest
                   , FastCut.SequenceTest
    build-depends:   base                 >= 4        && < 5
                   , unordered-containers >= 0.2      && < 0.3
                   , fastcut
                   , tasty
                   , tasty-hunit
                   , tasty-hspec
                   , tasty-discover
  ghc-options:     -Wall
