name:                 fastcut
version:              0.1.0
synopsis:             High-productivity video and audio editing
-- description:
license:              MPL-2.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@gmail.com
copyright:            Oskar Wickström
category:             Multimedia
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:   CHANGELOG.md
data-dir:             src/data
data-files:           gui.glade
                    , style.css
                    , stripes.png

library
  exposed-modules:      Control.Monad.Indexed.IO
                      , FastCut.Application
                      , FastCut.Application.Base
                      , FastCut.Application.ImportMode
                      , FastCut.Application.KeyMaps
                      , FastCut.Application.LibraryMode
                      , FastCut.Application.TimelineMode
                      , FastCut.Composition
                      , FastCut.Composition.Delete
                      , FastCut.Composition.Focused
                      , FastCut.Composition.Insert
                      , FastCut.Composition.Split
                      , FastCut.Duration
                      , FastCut.Focus
                      , FastCut.Focus.Parent
                      , FastCut.Import.Audio
                      , FastCut.Import.Video
                      , FastCut.KeyMap
                      , FastCut.Prelude
                      , FastCut.Progress
                      , FastCut.Project
                      , FastCut.Project.Store
                      , FastCut.Library
                      , FastCut.MediaType
                      , FastCut.Render.Composition
                      , FastCut.Render.FFmpeg
                      , FastCut.Render.FFmpeg.Command
                      , FastCut.Render.Timestamp
                      , FastCut.UserInterface
                      , FastCut.UserInterface.GtkInterface
                      , FastCut.UserInterface.GtkInterface.EventListener
                      , FastCut.UserInterface.GtkInterface.HelpView
                      , FastCut.UserInterface.GtkInterface.ImportView
                      , FastCut.UserInterface.GtkInterface.LibraryView
                      , FastCut.UserInterface.GtkInterface.TimelineView
  build-depends:        base >=4.10 && <4.12
                      , async
                      , binary
                      , deepseq
                      , directory
                      , dhall
                      , exceptions
                      , ffmpeg-light >= 0.12.1 && <0.13
                      , filepath
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gtk-declarative
                      , gi-gdk
                      , gi-pango
                      , indexed
                      , JuicyPixels
                      , hashable
                      , haskell-gi
                      , haskell-gi-base
                      , lens
                      , massiv >= 0.1.6.1 && < 0.2
                      , massiv-io >= 0.1.4 && < 0.2
                      , motor >= 0.3 && < 0.4
                      , mtl
                      , parallel
                      , pipes
                      , pipes-parse
                      , primitive
                      , protolude
                      , process
                      , row-types
                      , transformers
                      , temporary
                      , text
                      , time
                      , unordered-containers
                      , vector
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:        -Wall
  default-extensions: NoImplicitPrelude

executable fastcut
  main-is:              Main.hs
  other-modules:        Paths_fastcut
  -- other-extensions:
  build-depends:        base >=4.10 && <4.12
                      , fastcut
                      , filepath
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gdk
                      , gi-pango
                      , haskell-gi
                      , haskell-gi-base
                      , temporary
                      , text
                      , time
  hs-source-dirs:       exe
  default-language:     Haskell2010
  ghc-options:        -Wall -threaded
  default-extensions: NoImplicitPrelude

executable fastcut-split
  main-is:              Split.hs
  other-modules:        Paths_fastcut
  -- other-extensions:
  build-depends:        base >=4.10 && <4.12
                      , fastcut
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gdk
                      , gi-pango
                      , haskell-gi
                      , haskell-gi-base
                      , text
                      , time
  hs-source-dirs:       exe
  default-language:     Haskell2010
  ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude

test-suite fastcut-tests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  other-modules:   FastCut.Composition.FocusedTest
                 , FastCut.Composition.DeleteTest
                 , FastCut.Composition.Generators
                 , FastCut.Composition.InsertTest
                 , FastCut.Composition.ValidFocusTest
                 , FastCut.FocusTest
                 , FastCut.Render.CompositionTest
                 , FastCut.Render.TimestampTest
                 , FastCut.Render.FFmpeg.CommandTest
                 , FastCut.TestLibrary
                 , FastCut.Import.VideoTest
  build-depends:   base                 >= 4        && < 5
                 , unordered-containers >= 0.2      && < 0.3
                 , extra
                 , fastcut
                 , hedgehog
                 , JuicyPixels
                 , pipes
                 , pipes-parse
                 , massiv
                 , massiv-io
                 , tasty
                 , tasty-hunit
                 , tasty-hspec
                 , tasty-hedgehog
                 , tasty-discover
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  ghc-options:     -Wall

benchmark fastcut-benchmark
  type:            exitcode-stdio-1.0
  hs-source-dirs:  bench
  main-is:         Benchmark.hs
  build-depends:   base                 >= 4        && < 5
                 , bytestring
                 , criterion
                 , fastcut
                 , JuicyPixels
                 , lens
                 , massiv
                 , massiv-io
                 , vector
  ghc-options:     -Wall -O2
  default-extensions:   NoImplicitPrelude
