name:                 komposition
version:              0.1.0
synopsis:             High-productivity screencast editing
description:          This project can be built using Stack, Cabal, and Nix. Please see the
                      <https://owickstrom.github.io/komposition/ documentation> for build
                      instructions and more information.
stability:            alpha
license:              MPL-2.0
license-file:         LICENSE
bug-reports:          https://github.com/owickstrom/komposition/issues
author:               Oskar Wickström
maintainer:           oskar.wickstrom@gmail.com
copyright:            Oskar Wickström
category:             Multimedia
build-type:           Simple
cabal-version:        >=1.10

extra-source-files:   CHANGELOG.md
data-dir:             src/data
data-files:           style.css
                    , stripes.png

source-repository head
  type:               git
  location:           git://github.com/owickstrom/komposition.git

library
  exposed-modules:      Control.Monad.Indexed.IO
                      , Komposition.Application
                      , Komposition.Application.Base
                      , Komposition.Application.Form
                      , Komposition.Application.ImportMode
                      , Komposition.Application.KeyMaps
                      , Komposition.Application.LibraryMode
                      , Komposition.Application.TimelineMode
                      , Komposition.Application.WelcomeScreenMode
                      , Komposition.Classification
                      , Komposition.Composition
                      , Komposition.Composition.Delete
                      , Komposition.Composition.Focused
                      , Komposition.Composition.Insert
                      , Komposition.Composition.Paste
                      , Komposition.Composition.Split
                      , Komposition.Duration
                      , Komposition.FFmpeg.Command
                      , Komposition.FFmpeg.Process
                      , Komposition.Focus
                      , Komposition.Focus.Parent
                      , Komposition.History
                      , Komposition.Import.Audio
                      , Komposition.Import.Audio.Sox
                      , Komposition.Import.Video
                      , Komposition.Import.Video.FFmpeg
                      , Komposition.KeyMap
                      , Komposition.Logging
                      , Komposition.Logging.FastLogger
                      , Komposition.Prelude
                      , Komposition.Progress
                      , Komposition.Project
                      , Komposition.Project.Store
                      , Komposition.Project.Store.File
                      , Komposition.Library
                      , Komposition.MediaType
                      , Komposition.Render
                      , Komposition.Render.Composition
                      , Komposition.Render.FFmpeg
                      , Komposition.UserInterface
                      , Komposition.UserInterface.Dialog
                      , Komposition.UserInterface.GtkInterface
                      , Komposition.UserInterface.GtkInterface.CustomWidget
                      , Komposition.UserInterface.GtkInterface.DialogView
                      , Komposition.UserInterface.GtkInterface.EventListener
                      , Komposition.UserInterface.GtkInterface.GtkWindowMarkup
                      , Komposition.UserInterface.GtkInterface.HelpView
                      , Komposition.UserInterface.GtkInterface.ImportView
                      , Komposition.UserInterface.GtkInterface.LibraryView
                      , Komposition.UserInterface.GtkInterface.NewProjectView
                      , Komposition.UserInterface.GtkInterface.NumberInput
                      , Komposition.UserInterface.GtkInterface.RangeSlider
                      , Komposition.UserInterface.GtkInterface.SelectBox
                      , Komposition.UserInterface.GtkInterface.TimelineView
                      , Komposition.UserInterface.GtkInterface.ThumbnailPreview
                      , Komposition.UserInterface.GtkInterface.WelcomeScreenView
                      , Komposition.UserInterface.Help
                      , Komposition.Timestamp
                      , Komposition.VideoSettings
  build-depends:        base >=4.10 && <4.12
                      , async
                      , binary
                      , deepseq
                      , directory
                      , exceptions
                      , fast-logger
                      , ffmpeg-light >= 0.12.1 && <0.13
                      , filepath
                      , fused-effects >= 0.1.1.0 && < 0.2
                      , gi-gobject
                      , gi-glib
                      , gi-gst
                      , gi-gtk
                      , gi-gtk-declarative
                      , gi-gdk
                      , gi-gdkpixbuf
                      , gi-pango
                      , indexed
                      , JuicyPixels
                      , hashable
                      , haskell-gi
                      , haskell-gi-base
                      , lens
                      , massiv >= 0.1.6.1 && < 0.2
                      , massiv-io >= 0.1.4 && < 0.2
                      , motor >= 0.3 && < 0.4
                      , mtl
                      , pipes
                      , pipes-parse
                      , pipes-safe
                      , primitive
                      , protolude
                      , process
                      , typed-process >= 0.2 && < 0.3
                      , row-types
                      , safe-exceptions
                      , transformers
                      , temporary
                      , text
                      , time
                      , unordered-containers
                      , vector
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:        -Wall -fno-warn-unticked-promoted-constructors
  default-extensions: NoImplicitPrelude

executable komposition
  main-is:              Main.hs
  other-modules:        Paths_komposition
  -- other-extensions:
  build-depends:        base >=4.10 && <4.12
                      , komposition
                      , fast-logger
                      , filepath
                      , fused-effects
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gdk
                      , gi-pango
                      , haskell-gi
                      , haskell-gi-base
                      , temporary
                      , text
                      , time
  hs-source-dirs:       exe
  default-language:     Haskell2010
  ghc-options:        -Wall -threaded -O -with-rtsopts=-N
  default-extensions: NoImplicitPrelude

executable komposition-split
  main-is:              Split.hs
  other-modules:        Paths_komposition
  -- other-extensions:
  build-depends:        base >=4.10 && <4.12
                      , directory
                      , filepath
                      , ffmpeg-light
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gdk
                      , gi-pango
                      , haskell-gi
                      , haskell-gi-base
                      , komposition
                      , lens
                      , massiv-io
                      , pipes
                      , pipes-parse
                      , pipes-safe
                      , text
                      , time
  hs-source-dirs:       exe
  default-language:     Haskell2010
  ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  default-extensions: NoImplicitPrelude

test-suite komposition-tests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  other-modules:   Komposition.Composition.FocusedTest
                 , Komposition.Composition.DeleteTest
                 , Komposition.Composition.Generators
                 , Komposition.Composition.InsertTest
                 , Komposition.Composition.ValidFocusTest
                 , Komposition.FFmpeg.CommandTest
                 , Komposition.FocusTest
                 , Komposition.Import.Video.FFmpegTest
                 , Komposition.Project.Generators
                 , Komposition.Project.StoreTest
                 , Komposition.Render.CompositionTest
                 , Komposition.TestLibrary
                 , Komposition.TimestampTest
  build-depends:   base                 >= 4        && < 5
                 , unordered-containers >= 0.2      && < 0.3
                 , extra
                 , komposition
                 , hedgehog
                 , JuicyPixels
                 , fused-effects
                 , lens
                 , pipes
                 , pipes-parse
                 , massiv
                 , massiv-io
                 , tasty
                 , tasty-hunit
                 , tasty-hspec
                 , tasty-hedgehog
                 , tasty-discover
                 , temporary
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  ghc-options:     -Wall -fno-warn-unticked-promoted-constructors

benchmark komposition-benchmark
  type:            exitcode-stdio-1.0
  hs-source-dirs:  bench
  main-is:         Benchmark.hs
  build-depends:   base                 >= 4        && < 5
                 , bytestring
                 , criterion
                 , komposition
                 , JuicyPixels
                 , lens
                 , massiv
                 , massiv-io
                 , vector
  ghc-options:     -Wall -O2
  default-extensions:   NoImplicitPrelude
